Fixed h3 main news text alignment for laptop

--- a/styles-laptop.css
+++ b/styles-laptop.css
@@ -116,6 +116,7 @@
     .container-main-news h3 {
       display: flex;
       align-self: center;
+      text-align: center;
       padding-top: 2%;
       font-size: 2.5em;
       font-weight: 600;
